syntax = "proto3";

option csharp_namespace = "CustomerManager.RPC";

package customerManager;

// The loan service definition.
service CustomerRpc {
  // Sends a loan request
  rpc GetMonthlyIncome(MonthlyIncomeRequest) returns (MonthlyIncomeReply);
}

message MonthlyIncomeRequest {
  string Id = 1;  
}

// The response message containing the greetings.
message MonthlyIncomeReply {
  //Antar att hela kronor räcker.
  int32 MonthlyIncome = 1;
}
